--- a/main.css
+++ b/main.css
@@ -6,85 +6,92 @@
     padding: 0%;
     box-sizing: border-box;
 }
+html{
+    font-size: 62.5%;
+}
 body{
     font-family: 'Roboto', sans-serif;
     background-color: rgb(241,243,246);
+    width: 100%;
+    height:100vh;
     
 }
 :root{
     --bluecolor: rgb(40,116,240);
 }
+@media  (min-width: 1024px)
+{
 .bottom{
     background-color: white;
-    margin-top: 50px;
-    padding-left: 20px;
-    padding-top: 50px;
-    padding-right: 20px;
+    margin-top: 5rem;
+    padding-left: 2rem;
+    padding-top: 5rem;
+    padding-right: 2rem;
     color: rgb(139, 134, 134);
 }
 .bottom p{
-    font-size: 12px;
-    line-height: 20px;
-    padding-top: 20px;
+    font-size: 1.2rem;
+    line-height: 2rem;
+    padding-top: 2rem;
 }
 .bottom h5{
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: 500;
-    padding-bottom: 50px;
+    padding-bottom: 5rem;
 }
 .Mobiles{
     display: flex;
     text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     
 }
 .mobdiv h4{
-    padding-top: 10px;
-    font-size: 15px;
+    padding-top: 1rem;
+    font-size: 1.5rem;
 }
 .mobdiv p{
     color: rgb(85,163,113) ;
     
-    font-size: 14px;
-    padding-bottom: 10px;
-    padding-top: 10px ;
+    font-size: 1.4rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem ;
 }
 .mobdiv span{
     color: rgb(102, 101, 101); 
-    font-size: 13px;
+    font-size: 1rem;
 }
 
-.mobimg{p
-    width: 100px;
-    height: 200px;
+.mobimg{
+    width: 10rem;
+    height: 20rem;
    
 }
 .mobdiv{
-    padding: 10px 40px;
+    padding: 1rem 4rem;
     background-color: white;
 }
 .selfie{
-    padding: 20px 0px;
-    margin: 0px 10px 0px 10px;
+    padding: 2rem 0rem;
+    margin: 0rem 1rem 0rem 1rem;
     background-color: white;
 }
 .selfie p{
-    padding-left: 20px;
-    font-size: 14px;
+    padding-left: 2rem;
+    font-size: 1.4rem;
     color: rgb(102, 101, 101);
 }
 .selfie h2
 {
     display: inline;
     font-weight: 400;
-    padding-left: 20px;
+    padding-left: 2rem;
 }
 .selfie button
 {
-    margin-left: 1170px;
-    padding: 12px 25px;
-    font-size: 12px;
+    margin-left: 117rem;
+    padding: 1.2rem 2.5rem;
+    font-size: 1.2rem;
     background-color: var(--bluecolor);
     border-style: var(--bluecolor);
     color: white;
@@ -101,18 +108,18 @@ body{
 }
 .timg{
   width: 32.5%;
-  margin: 10px 0px 10px 10px;
+  margin: 1rem 0rem 1rem 1rem;
   
   
 }
 
 .mustpic{
-    padding: 20px;
+    padding: 2rem;
     text-align: center;
-    width: 200px;
-    height: 200px;
+    width: 20rem;
+    height: 20rem;
     flex: 10%;
-    margin-bottom: 65px;
+    margin-bottom: 6.5rem;
     
     
 
@@ -120,58 +127,62 @@ body{
 }
 .mustpic h3{
     
-    margin-top: 15px;
-    font-size: 15px;
-    margin-bottom: 10px;
+    margin-top: 1.5rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .mustpic p{
     color: rgb(85,163,113);
-    margin-bottom: 8px;
+    margin-bottom: 0.8rem;
 }
 .mustpic span{
- font-size: 13px;
+ font-size: 1.3rem;
 }
 
 .bigsaving{
     float: right;
     
     width: 23.5%;
-    height: 530px;
-    margin: 0px  10px 0px 8px;
+    height: 53rem;
+    margin: 0rem  1rem 0rem 0.8rem;
    
 }
 
 .options .opt {
-    width: 65px;
-    height: 65px;
+    width: 6.5rem;
+    height: 6.5rem;
 }
 .options {
     display: flex;
-    padding: 0px 150px;
-    font-size: 11px;
+    padding: 0rem 1.5rem;
+    font-size: 1.1rem;
     text-align: center ;
     background-color: white;
-    margin: 8px  10px;
+    margin: 0.8rem  1rem;
+    margin-top: 6.5rem;
 }
 .changeimage {
-    margin: 8px  10px; ;
+    margin: 0.8rem  1rem; 
+    position: relative;
+    
+
 }
 .headmust {
-    padding: 20px 0px;
-    margin: 0px 10px 0px 10px;
+    padding: 2rem 0rem;
+    margin: 0rem 1rem 0rem 1rem;
     background-color: white;
 }
 .headmust h2{
     display: inline;
     font-weight: 400;
-    padding-left: 20px;
+    padding-left: 2rem;
     
 }
 .headmust button{
-    margin-left: 1170px;
-    padding: 12px 25px;
-    font-size: 12px;
+    margin-left: 117rem;
+    padding: 1.2rem 2.5rem;
+    font-size: 1.2rem;
     background-color: var(--bluecolor);
     border-style: var(--bluecolor);
     color: white;
@@ -186,35 +197,41 @@ body{
     width: 75%;
     flex-wrap: wrap;
     float: left;
-    padding-left: 10px;
+    padding-left: 1rem;
     
         
 }
 
 
 .box {
-    padding: 0px 40px;
+    padding: 0rem 5.0rem;
+    
 }
 
 .fullnav{
     background-color: var(--bluecolor);
-    font-size: 16px;
-    padding: 10px 0px;
+    font-size: 1.6rem;
+    padding: 1rem 0rem;
+    top: 0;
     position: sticky;
+    position: fixed;
+
+   
     
 }
 .logo {
     display: inline-block;
-    padding-left: 230px;
-    font-size: 11px;
+    padding-left: 23rem;
+    font-size: 1.1rem;
     font-weight: 400;
     color: white;
     font-style: bold;
-    padding-top: 0px;
+    padding-top: 0rem;
 }
 .top input{
-    padding: 10px 390px 10px 10px;
-    margin-right: 190px;
+    padding: 1rem 39rem 1rem 1rem;
+    margin-right: 19rem;
+    
     
 }
 .top{
@@ -222,31 +239,38 @@ body{
     text-align: center;
 }
 ul{
-    padding: 10px 20px 10px;
+    padding: 1rem 2rem 1rem;
 }
 .login{
     background: white;
-    padding: 0.3rem 2.5rem;
+    padding: 0.3rem 2.7rem;
     margin-top: 5px;
     border: 1px #ccc solid;
     color: var(--bluecolor);
-    font-family: font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     
     
 }
 .more{
-    padding: 10px 30px 10px 30px;
+    padding: 1rem 4rem 1rem 5rem;
     color: white;
     font-style: bold;
+    
+}
+.cart{
+padding: 1rem 22.5rem 1rem 0rem;
+    color: white;
+    font-style: bold;
+
 }
 .logo .flip {
-    width: 70px; 
+    width: 7rem; 
     display: block;
-    padding-top: 0px;
+    padding-top: 0rem;
     
 }
 .logo .star {
-width: 10px;
+width: 1rem;
 }
 .logo .yellow {
     color: rgb(255,229,0);
@@ -265,7 +289,12 @@ width: 10px;
       
       li a {
         display:inline-block;
-        padding: 8px;
+        padding: 0.8rem;
       }
+.mySlides 
+{
+    display: none;
+}
+
 }
 
