--- a/main.css
+++ b/main.css
@@ -1,300 +1,453 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
-body{
-    font-family: 'Roboto', sans-serif;
-    background-color: rgb(241,243,246);
-    width: 100%;
-    height:100vh;
-    
-}
-:root{
-    --bluecolor: rgb(40,116,240);
-}
-@media  (min-width: 1024px)
-{
-.bottom{
-    background-color: white;
-    margin-top: 5rem;
-    padding-left: 2rem;
-    padding-top: 5rem;
-    padding-right: 2rem;
-    color: rgb(139, 134, 134);
-}
-.bottom p{
-    font-size: 1.2rem;
-    line-height: 2rem;
-    padding-top: 2rem;
-}
-.bottom h5{
-    font-size: 1.5rem;
-    font-weight: 500;
-    padding-bottom: 5rem;
-}
-.Mobiles{
-    display: flex;
-    text-align: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    
-}
-.mobdiv h4{
-    padding-top: 1rem;
-    font-size: 1.5rem;
-}
-.mobdiv p{
-    color: rgb(85,163,113) ;
-    
-    font-size: 1.4rem;
-    padding-bottom: 1rem;
-    padding-top: 1rem ;
-}
-.mobdiv span{
-    color: rgb(102, 101, 101); 
-    font-size: 1rem;
-}
-
-.mobimg{
-    width: 10rem;
-    height: 20rem;
-   
-}
-.mobdiv{
-    padding: 1rem 4rem;
-    background-color: white;
-}
-.selfie{
-    padding: 2rem 0rem;
-    margin: 0rem 1rem 0rem 1rem;
-    background-color: white;
-}
-.selfie p{
-    padding-left: 2rem;
-    font-size: 1.4rem;
-    color: rgb(102, 101, 101);
-}
-.selfie h2
-{
-    display: inline;
-    font-weight: 400;
-    padding-left: 2rem;
-}
-.selfie button
-{
-    margin-left: 117rem;
-    padding: 1.2rem 2.5rem;
-    font-size: 1.2rem;
-    background-color: var(--bluecolor);
-    border-style: var(--bluecolor);
-    color: white;
-}
-
-
-
-.threeimg{
-    display: flex;
-    width: 100%;
-    flex: 33.3%;
-    
-    
-}
-.timg{
-  width: 32.5%;
-  margin: 1rem 0rem 1rem 1rem;
-  
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: rgb(241, 243, 246);
   
 }
-
-.mustpic{
-    padding: 2rem;
-    text-align: center;
-    width: 20rem;
-    height: 20rem;
-    flex: 10%;
-    margin-bottom: 6.5rem;
-    
-    
-
-
+:root {
+  --bluecolor: rgb(40, 116, 240);
 }
-.mustpic h3{
-    
-    margin-top: 1.5rem;
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+.bottom {
+  background-color: white;
+  margin-top: 5rem;
+  padding-left: 2rem;
+  padding-top: 5rem;
+  padding-right: 2rem;
+  color: rgb(139, 134, 134);
+}
+.bottom p {
+  font-size: 1.2rem;
+  line-height: 2rem;
+  padding-top: 2rem;
+}
+.bottom h5 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  padding-bottom: 5rem;
+}
+.Mobiles {
+  display: flex;
+  text-align: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.mobdiv h4 {
+  padding-top: 1rem;
+  font-size: 1.5rem;
+}
+.mobdiv p {
+  color: rgb(85, 163, 113);
+
+  font-size: 1.4rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+.mobdiv span {
+  color: rgb(102, 101, 101);
+  font-size: 1rem;
 }
 
-.mustpic p{
-    color: rgb(85,163,113);
-    margin-bottom: 0.8rem;
+.mobimg {
+  width: 10rem;
+  height: 20rem;
 }
-.mustpic span{
- font-size: 1.3rem;
+.mobdiv {
+  flex: auto;
+  background-color: white;
+  padding-bottom: 2rem;
+}
+.selfie {
+  padding: 2rem 0rem;
+  margin: 0rem 1rem 0rem 1rem;
+  background-color: white;
+}
+.selfie p {
+  padding-left: 2rem;
+  font-size: 1.4rem;
+  color: rgb(102, 101, 101);
+}
+.selfie h2 {
+  display: inline-block;
+  width: 90%;
+  font-weight: 400;
+  padding-left: 2rem;
+}
+.selfie button {
+  padding: 1.2rem 2.5rem;
+  font-size: 1.2rem;
+  background-color: var(--bluecolor);
+  border-style: var(--bluecolor);
+  color: white;
 }
 
-.bigsaving{
-    float: right;
-    
-    width: 23.5%;
-    height: 53rem;
-    margin: 0rem  1rem 0rem 0.8rem;
-   
+.threeimg {
+      display: flex;
+    width: 100%;
+    padding: 10px;
+}
+.timg {
+  width: 32%;
+  margin: 1rem;
+}
+
+.mustpic {
+ padding: 1rem; 
+    background: white;
+    width: 17rem;
+    margin: 10px;
+}
+.mustpic img{
+  max-width: 100%;
+}
+.mustpic h3 {
+  margin-top: 1.5rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.mustpic p {
+  color: rgb(85, 163, 113);
+  margin-bottom: 0.8rem;
+}
+.mustpic span {
+  font-size: 1.3rem;
+}
+
+.bigsaving {
+  float: right;
+
+  width: 23.5%;
+  height: 53rem;
+  margin: 0rem 1rem 0rem 0.8rem;
 }
 
 .options .opt {
-    width: 6.5rem;
-    height: 6.5rem;
+  width: 6.5rem;
+  height: 6.5rem;
+
 }
+
 .options {
-    display: flex;
-    padding: 0rem 1.5rem;
-    font-size: 1.1rem;
-    text-align: center ;
-    background-color: white;
-    margin: 0.8rem  1rem;
-    margin-top: 6.5rem;
+  display: flex;
+  padding: 2rem 0;
+  font-size: 1.1rem;
+  text-align: center;
+  background-color: white;
+  margin-top: 6rem;
 }
 .changeimage {
-    margin: 0.8rem  1rem; 
-    position: relative;
-    
-
+  margin: 0.8rem 0;
+  position: relative;
+  width: 100%;
 }
 .headmust {
-    padding: 2rem 0rem;
-    margin: 0rem 1rem 0rem 1rem;
-    background-color: white;
+  padding: 2rem 0rem;
+  margin: 0rem 1rem 0rem 1rem;
+  background-color: white;
 }
-.headmust h2{
-    display: inline;
-    font-weight: 400;
-    padding-left: 2rem;
-    
+.headmust h2 {
+  display: inline-block;
+  font-weight: 400;
+  padding-left: 2rem;
+  width: 90%;
 }
-.headmust button{
-    margin-left: 117rem;
-    padding: 1.2rem 2.5rem;
-    font-size: 1.2rem;
-    background-color: var(--bluecolor);
-    border-style: var(--bluecolor);
-    color: white;
-    
-
+.headmust button {
+  padding: 1.2rem 2.5rem;
+  font-size: 1.2rem;
+  background-color: var(--bluecolor);
+  border-style: var(--bluecolor);
+  color: white;
 }
 
 .Musthave {
-    display: flex;
-    text-align: center;
-    background-color: white;
-    width: 75%;
-    flex-wrap: wrap;
-    float: left;
-    padding-left: 1rem;
-    
-        
+  display: flex;
+  text-align: center;
+  background-color: white;
+  width: 74%;
+  flex-wrap: wrap;
+  float: left;
+  margin-left: 10px;
 }
-
 
 .box {
-    padding: 0rem 5.0rem;
-    
+  flex: auto;
 }
 
-.fullnav{
-    background-color: var(--bluecolor);
-    font-size: 1.6rem;
-    padding: 1rem 0rem;
-    top: 0;
-    position: sticky;
-    position: fixed;
-
-   
-    
+.fullnav {
+  background-color: var(--bluecolor);
+  font-size: 1.6rem;
+  padding: 1rem 0rem;
+  top: 0;
+  position: sticky;
+   position: fixed; 
+  width: 100%;
+  display: flex;
 }
+.fullnav .top-input {
+  width: 50%;
+}
+
+.fullnav .top-input input[type="search"] {
+  width: 85%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 0px;
+}
+
 .logo {
-    display: inline-block;
-    padding-left: 23rem;
-    font-size: 1.1rem;
-    font-weight: 400;
-    color: white;
-    font-style: bold;
-    padding-top: 0rem;
-}
-.top input{
-    padding: 1rem 39rem 1rem 1rem;
-    margin-right: 19rem;
-    
-    
-}
-.top{
-    display: inline-block;
-    text-align: center;
-}
-ul{
-    padding: 1rem 2rem 1rem;
-}
-.login{
-    background: white;
-    padding: 0.3rem 2.7rem;
-    margin-top: 5px;
-    border: 1px #ccc solid;
-    color: var(--bluecolor);
-    font-family: 'Roboto', sans-serif;
-    
-    
-}
-.more{
-    padding: 1rem 4rem 1rem 5rem;
-    color: white;
-    font-style: bold;
-    
-}
-.cart{
-padding: 1rem 22.5rem 1rem 0rem;
-    color: white;
-    font-style: bold;
+  width: 15%;
+  text-align: right;
+  margin-right: 30px;
 
+  display: inline-block;
+  padding-left: 10rem;
+  font-size: 1.1rem;
+  font-weight: 400;
+  color: white;
+  font-style: bold;
+  padding-top: 0rem;
 }
+.top input {
+  padding: 1rem 39rem 1rem 1rem;
+  margin-right: 19rem;
+}
+.top {
+  /* display: inline-block;
+  text-align: center; */
+  width: 33%;
+}
+.top ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 20px;
+  margin-right: 30px;
+  color: #fff;
+}
+/* ul {
+  padding: 1rem 2rem 1rem;
+} */
+
+.login {
+  background: white;
+  padding: 8px 45px !important;
+  border-radius: 2px;
+  color: var(--bluecolor) !important;
+  font-family: "Roboto", sans-serif;
+}
+/* .more {
+  padding: 1rem 4rem 1rem 5rem;
+  color: white;
+  font-style: bold;
+}
+.cart {
+  padding: 1rem 30rem 1rem 0rem;
+  color: white;
+  font-style: bold;
+} */
 .logo .flip {
-    width: 7rem; 
-    display: block;
-    padding-top: 0rem;
-    
+  width:7rem;
+  display: block;
+  margin-left: 50%;
+  padding-top: 0rem;
 }
 .logo .star {
-width: 1rem;
+  width: 1rem;
 }
 .logo .yellow {
-    color: rgb(255,229,0);
+  color: rgb(255, 229, 0);
 }
 .top ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-
-      }
-      
-      li {
-        float: left;
-      }
-      
-      li a {
-        display:inline-block;
-        padding: 0.8rem;
-      }
-.mySlides 
-{
-    display: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
+li {
+  float: left;
 }
 
+li a {
+  display: inline-block;
+  padding: 0.8rem;
+}
+.mySlides {
+  display: none;
+  width: 100%;
+}
+.bottomdiv{
+  width: 100%;
+  background-color: rgb(23,35,55);
+  
+}
+
+.bottomtableleft{
+  display: inline-table;
+  background-color: rgb(23,35,55);
+  font-size: 12px;
+  color: white;
+  line-height: 20px;
+  padding-left: 40px;
+ 
+  
+}
+.bottomtableright{
+  display: inline-table;
+  background-color: rgb(23,35,55);
+  font-size: 12px;
+  color: white;
+  line-height: 20px;
+  padding-top: 30px;
+}
+.bottomtableleft th{
+ text-align: left;
+ font-weight: 100;
+ color: rgb(113,115,119);
+ padding: 0px 200px 0px 0px;
+
+}
+.bottomtableright th{
+  text-align: left;
+  font-weight: 100;
+  color: rgb(113,115,119);
+ }
+
+.footer{
+  background-color: rgb(23,35,55);
+  padding: 20px 10px;
+  color: white;
+  font-size: 14px;
+  
+}
+.footer li{
+  padding-right: 50px;
+  margin-left: 60px;
+}
+
+
+@media only screen and (min-width: 320px) and (max-width: 767px){
+  .fullnav{
+    position: static;
+    display: block;
+  }
+  .logo{
+    width: 100%;
+    text-align: center;
+  }
+  .logo .flip{
+    margin: auto;
+  }
+  .fullnav .top-input{
+    width: 100%;
+  }
+  .fullnav .top-input input[type="search"]{
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+  }
+
+  .top{
+    width: 100%;
+  }
+  .top ul li{
+    margin: 22px;
+  }
+  .options{
+    display: flex;
+    flex-flow:wrap;
+    margin-top: unset;
+  }
+  .box{
+    margin-bottom: 10px;
+  }
+  .headmust h2{
+    width: 72%;
+  }
+  .Musthave {
+    display: flex;
+    flex-flow: wrap;
+    width: 100%;
+    margin-left: unset;
+}
+.bigsaving{
+  width: 100%;
+  float: unset;
+}
+.headmust{
+  margin: 0px;
+}
+.selfie h2{
+  width: 72%;
+}
+.Mobiles{
+flex-flow: wrap;
+} 
+.timg {
+margin: auto;
+}
+
+.bottomdiv{
+  width: 100%;
+  background-color: rgb(23,35,55);
+  display: none;
+  
+}
+
+.bottomtableleft{
+  display: inline-table;
+  background-color: rgb(23,35,55);
+  font-size: 12px;
+  color: white;
+  line-height: 20px;
+  padding-left: 40px;
+  display: none;
+ 
+  
+}
+.bottomtableright{
+  display: inline-table;
+  background-color: rgb(23,35,55);
+  font-size: 12px;
+  color: white;
+  line-height: 20px;
+  padding-top: 30px;
+  display: none;
+}
+.bottomtableleft th{
+ text-align: left;
+ font-weight: 100;
+ color: rgb(113,115,119);
+ padding: 0px 200px 0px 0px;
+ display: none;
+
+}
+.bottomtableright th{
+  text-align: left;
+  font-weight: 100;
+  color: rgb(113,115,119);
+  display: none;
+ }
+
+.footer{
+  background-color: rgb(23,35,55);
+  padding: 20px 10px;
+  color: white;
+  font-size: 14px;
+  display: none;
+  
+}
+.footer li{
+  padding-right: 50px;
+  margin-left: 60px;
+  display: none;
+}
